[tool.poetry]
name = "tornado-jsonrpc2"
version = "0.4.dev"
description = "JSON-RPC request handler for Tornado."
authors = ["Niko Wenselowski <der@nik0.de>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.6"
tornado = ">=5.0"

[tool.poetry.dev-dependencies]
pytest-tornado = ">= 0.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
